2011-01-13  John W. Eaton  <jwe@octave.org>

	* DAE.h (DAE::~DAE): Now virtual.
	* DAERT.h (DAERT::~DAERT): Likewise.
	* ODE.h (ODE::~ODE): Likewise.
	* DAEFunc.h (DAEFunc::~DAEFunc): Likewise.
	* DAERTFunc.h (DAEFunc::~DAEFunc): Likewise.
	* ODEFunc.h (ODE::~ODE): Likewise.
	* ODESFunc.h (ODESFunc::~ODESFunc): Likewise.

	* LSODE.h (class LSODE): Delete pointer data members.
	(LSODE::LSODE): Initialize all data members in initialization lists.
	* LSODE.cc (LSODE::integrate): Extract pointers to data from
	array data members at each call.

	* DASPK.h (class DASPK): Delete pointer data members.
	(DASPK::DASPK): Initialize all data members in initialization lists.
	* DASPK.cc (DASPK::integrate): Extract pointers to data from
	array data members at each call.

	* DASSL.h (class DASSL): Delete pointer data members.
	(DASSL::DASSL): Initialize all data members in initialization lists.
	* DASSL.cc (DASSL::integrate): Extract pointers to data from
	array data members at each call.

	* DASRT.h (class DASRT): Delete pointer data members.
	(DASRT::DASRT): Initialize all data members in initialization lists.
	* DASRT.cc (DASRT::integrate): Extract pointers to data from
	array data members at each call.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* kpse.cc (struct str_llist_elt, struct cache_entry):
	Explicitly define constructor and destructor.

	* Quad.h (Quad::Quad, IndefQuad::IndefQuad,
	FloatIndefQuad::FloatIndefQuad): Initialize all data members in
	initialization lists.
	* CollocWt.h (CollocWt::CollocWt): Likewise.
	* oct-time.h (octave_strptime::octave_strptime): Likewise.
	* oct-time.cc (octave_time::octave_time): Likewise.
	* pathsearch.h (dir_path::dir_path): Likewise.
	* regex-match.h (regex_match::regex_match): Likewise.
	* oct-sort.h (octave_sort::MergeState::MergeState): Likewise.
	* oct-shlib.h, oct-shlib.cc (octave_shlib::shlib_rep::shlib_rep,
	octave_shlib::octave_shlib): Likewise.
	* oct-mutex.h, oct-mutex.cc (octave_mutex::octave_mutex): Likewise.